# llama

./: .gitignore  CONTRIBUTING.md  Dockerfile  GRADER_RUBRIC.md  Makefile  README.md  SCENARIO_SCHEMA.md  docker-compose.yml  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  scenarios.py  shaping.py  upload_hf.py
dashboard-v3/: package-lock.json  package.json  tailwind.config.js
dashboard-v3/src/: App.tsx  index.css
server/: app.py  middleware.py  session.py
